BOOKKEEPER-1053: Upgrade RAT maven version to 0.12 and ignore Eclipse project files

--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -279,12 +279,16 @@
       <plugin>
         <groupId>org.apache.rat</groupId>
         <artifactId>apache-rat-plugin</artifactId>
-        <version>0.7</version>
         <configuration>
           <excludes>
             <!-- exclude generated file //-->
             <exclude>**/DataFormats.java</exclude>
             <exclude>**/BookkeeperProtocol.java</exclude>
+            <exclude>**/target/**/*</exclude>
+            <exclude>**/.classpath</exclude>
+            <exclude>**/.gitignore</exclude>
+            <exclude>**/.project</exclude>
+            <exclude>**/.settings/*</exclude>
           </excludes>
         </configuration>
       </plugin>
