--- a/bookkeeper-stats-providers/pom.xml
+++ b/bookkeeper-stats-providers/pom.xml
@@ -25,8 +25,6 @@
     <version>4.5.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.apache.bookkeeper</groupId>
-  <version>4.5.0-SNAPSHOT</version>
   <artifactId>bookkeeper-stats-providers</artifactId>
   <packaging>pom</packaging>
   <name>bookkeeper-stats-providers</name>
@@ -34,6 +32,7 @@
     <module>twitter-science-provider</module>
     <module>twitter-ostrich-provider</module>
     <module>codahale-metrics-provider</module>
+    <module>prometheus-metrics-provider</module>
   </modules>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
