--- a/compat-deps/bookkeeper-server-compat-4.2.0/pom.xml
+++ b/compat-deps/bookkeeper-server-compat-4.2.0/pom.xml
@@ -61,6 +61,7 @@
                   <include>com.google.protobuf:protobuf-java</include>
                   <include>org.apache.*:*</include>
                   <include>org.jboss.*:*</include>
+                  <include>com.google.guava:guava</include>
                   <include>commons-*:*</include>
                 </includes>
                 <excludes>
@@ -91,6 +92,10 @@
                 <relocation>
                   <pattern>org.jboss</pattern>
                   <shadedPattern>org.jboss.bk_v4_2_0</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>com.google</pattern>
+                  <shadedPattern>com.google.bk_v4_2_0</shadedPattern>
                 </relocation>
               </relocations>
             </configuration>
