--- a/.travis.yml
+++ b/.travis.yml
@@ -25,13 +25,18 @@ matrix:
   include:
     - os: osx
       osx_image: xcode8
+    - os: linux
+      env: CUSTOM_JDK="oraclejdk8"
 
 before_install:
   - echo "MAVEN_OPTS='-Xmx3072m -XX:MaxPermSize=512m'" > ~/.mavenrc
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then export JAVA_HOME=$(/usr/libexec/java_home); fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then jdk_switcher use "$CUSTOM_JDK"; fi
 
 script:
   - travis_retry mvn --batch-mode clean apache-rat:check compile findbugs:check
-  - ./dev/ticktoc.sh "mvn --batch-mode clean package"
+# Disabled the tests here. Since tests are running much slower on Travis than on Jenkins
+#  - ./dev/ticktoc.sh "mvn --batch-mode clean package"
 
 cache:
   directories:
