add enableStatistics config to bk_server.conf

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -315,5 +315,8 @@ zkTimeout=10000
 # Defaults to false.
 #useHostNameAsBookieID=false
 
-# Stats Provider Class
+# Whether statistics are enabled
+#enableStatistics=true
+
+# Stats Provider Class (if statistics are enabled)
 #statsProviderClass=org.apache.bookkeeper.stats.CodahaleMetricsProvider
