--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -315,6 +315,11 @@ zkTimeout=10000
 # Defaults to false.
 #useHostNameAsBookieID=false
 
+# Auto-replication
+# The grace period, in seconds, that the replication worker waits before fencing and
+# replicating a ledger fragment that's still being written to upon bookie failure.
+#openLedgerRereplicationGracePeriod=30
+
 # Whether statistics are enabled
 #enableStatistics=true
 
