--- a/site/_data/config/bk_server.yaml
+++ b/site/_data/config/bk_server.yaml
@@ -26,6 +26,22 @@ groups:
   - param: flushInterval
     description: How long the interval to flush ledger index pages to disk, in milliseconds. Flushing index files will introduce much random disk I/O. If separating journal dir and ledger dirs each on different devices, flushing would not affect performance. But if putting journal dir and ledger dirs on same device, performance degrade significantly on too frequent flushing. You can consider increment flush interval to get better performance, but you need to pay more time on bookie server restart after failure.
     default: 100
+  - param: allowStorageExpansion
+    description: Allow the expansion of bookie storage capacity. Newly added ledger and index directories must be empty.
+    default: 'false'
+  - param: useHostNameAsBookieID
+    description: Whether the bookie should use its hostname to register with the ZooKeeper coordination service. When `false`, the bookie will use its IP address for the registration.
+    default: 'false'
+  - param: explicitLacInterval
+    description: Interval between sending an explicit LAC in seconds
+    default: 1
+  - param: auditorPeriodicBookieCheckInterval
+    description: The time interval between auditor bookie checks, in seconds. The auditor bookie check checks ledger metadata to see which bookies should contain entries for each ledger. If a bookie that should contain entries is unavailable, then the ledger containing that entry is marked for recovery. Setting this to 0 disables the periodic check. Bookie checks will still run when a bookie fails. The default is once per day.
+    default: 86400
+  - param: lostBookieRecoveryDelay
+    description: How long to wait, in seconds, before starting autorecovery of a lost bookie.
+    default: 0
+
 - name: Garbage collection settings
   params:
   - param: gcWaitTime
@@ -40,6 +56,7 @@ groups:
   - param: numReadWorkerThreads
     description: The umber of threads that handle read requests. If 0, reads are handled by [Netty threads](http://netty.io/wiki/thread-model.html) directly.
     default: 1
+
 - name: Netty server settings
   params:
   - param: serverTcpNoDelay
@@ -48,7 +65,9 @@ groups:
 
       If you are sending many small messages, such that more than one can fit in a single IP packet, setting server.tcpnodelay to false to enable Nagle algorithm can provide better performance.
     default: 'true'
+
 - name: Journal settings
+  params:
   - param: journalMaxSizeMB
     description: Max file size of journal file, in mega bytes. A new journal file will be created when the old one reaches the file size limitation.
     default: 2048
@@ -76,6 +95,10 @@ groups:
   - param: journalFlushWhenQueueEmpty
     description: If we should flush the journal when journal queue is empty.
     default: 'false'
+  - param: numJournalCallbackThreads
+    description: The number of threads that should handle journal callbacks.
+    default: 1
+
 - name: Ledger storage settings
   params:
   - param: ledgerStorageClass
@@ -84,7 +107,28 @@ groups:
   - param: ledgerDirectories
     description: The directory to which Bookkeeper outputs ledger snapshots. You can define multiple directories to store snapshots separated by a comma, for example `/tmp/data-dir1,/tmp/data-dir2`.
     default: /tmp/bk1-data,/tmp/bk2-data
+  - param: auditorPeriodicCheckInterval
+    description: |
+      The time interval, in seconds, at which the auditor will check all ledgers in the cluster. By default this runs once a week.
+
+      Set this to 0 to disable the periodic check completely. Note that periodic checking will put extra load on the cluster, so it should not be run more frequently than once a day.
+    default: 604800
+
 - name: Ledger cache settings
+  params:
+  - param: openFileLimit
+    description: |
+      Max number of ledger index files could be opened in bookie server. If number of ledger index files reaches this limitation, bookie server started to swap some ledgers from memory to disk. Too frequent swap will affect performance. You can tune this number to gain performance according your requirements.
+    default: 900
+  - param: pageSize
+    description: |
+      Size of a index page in ledger cache, in bytes. A larger index page can improve performance writing page to disk, which is efficent when you have small number of ledgers and these ledgers have similar number of entries. If you have large number of ledgers and each ledger has fewer entries, smaller index page would improve memory usage.
+    default: 8192
+  - param: pageLimit
+    description: |
+      How many index pages provided in ledger cache. If number of index pages reaches this limitation, bookie server starts to swap some ledgers from memory to disk. You can increment this value when you found swap became more frequent. But make sure pageLimit*pageSize should not more than JVM max memory limitation, otherwise you would got OutOfMemoryException. In general, incrementing pageLimit, using smaller index page would gain bettern performance in lager number of ledgers with fewer entries case. If pageLimit is -1, bookie server will use 1/3 of JVM memory to compute the limitation of number of index pages.
+    default: 1
+
 - name: Ledger manager settings
   params:
   - param: ledgerManagerType
@@ -93,19 +137,55 @@ groups:
   - param: zkLedgersRootPath
     description: Root zookeeper path to store ledger metadata. This parameter is used by zookeeper-based ledger manager as a root znode to store all ledgers.
     default: /ledgers
+
 - name: Entry log settings
   params:
   - param: logSizeLimit
     description: Max file size of entry logger, in bytes. A new entry log file will be created when the old one reaches the file size limitation.
     default: 2147483648
+  - param: entryLogFilePreallocationEnabled
+    description: Enable/Disable entry logger preallocation
+    default: true
+  - param: flushEntrylogBytes
+    description: Entry log flush interval, in bytes. Setting this to 0 or less disables this feature and makes flush happen on log rotation. Flushing in smaller chunks but more frequently reduces spikes in disk I/O. Flushing too frequently may negatively affect performance.
+    default: 0
+  - param: readBufferSizeBytes
+    description: The capacity allocated for [`BufferedReadChannel`](/api/org/apache/bookkeeper/bookie/BufferedReadChannel)s, in bytes.
+    default: 512
+  - param: writeBufferSizeBytes
+    description: The number of bytes used as capacity for the write buffer.
+    default: 65536
+
 - name: Entry log compaction settings
   params:
+  - param: compactionRate
+    description: The rate at which compaction will read entries. The unit is adds per second.
+    default: 1000
   - param: minorCompactionThreshold
     description: Threshold of minor compaction. For those entry log files whose remaining size percentage reaches below this threshold will be compacted in a minor compaction. If it is set to less than zero, the minor compaction is disabled.
     default: 0.2
   - param: minorCompactionInterval
     description: Interval to run minor compaction, in seconds. If it is set to less than zero, the minor compaction is disabled.
     defauit: 3600
+  - param: compactionMaxOutstandingRequests
+    description: Set the maximum number of entries which can be compacted without flushing. When compacting, the entries are written to the entrylog and the new offsets are cached in memory. Once the entrylog is flushed the index is updated with the new offsets. This parameter controls the number of entries added to the entrylog before a flush is forced. A higher value for this parameter means  more memory will be used for offsets. Each offset consists of 3 longs. This parameter should *not* be modified unless you know what you're doing.
+    default: 100000
+  - param: majorCompactionThreshold
+    description: Threshold of major compaction. For those entry log files whose remaining size percentage reaches below  this threshold will be compacted in a major compaction.  Those entry log files whose remaining size percentage is still higher than the threshold will never be compacted. If it is set to less than zero, the minor compaction is disabled.
+    default: 0.8
+  - param: majorCompactionInterval
+    description: Interval to run major compaction, in seconds. If it is set to less than zero, the major compaction is disabled.
+    default: 86400
+  - param: isThrottleByBytes
+    description: Throttle compaction by bytes or by entries.
+    default: 'false'
+  - param: compactionRateByEntries
+    description: Set the rate at which compaction will read entries. The unit is adds per second.
+    default: 1000
+  - param: compactionRateByBytes
+    description: Set the rate at which compaction will read entries. The unit is bytes added per second.
+    default: 1000000
+
 - name: Statistics
   params:
   - param: enableStatistics
@@ -114,9 +194,33 @@ groups:
   - param: statsProviderClass
     description: Stats provider class.
     default: org.apache.bookkeeper.stats.CodahaleMetricsProvider
+
 - name: Auto-replication
+  params:
+  - param: openLedgerRereplicationGracePeriod
+    description: The grace period, in seconds, that the replication worker waits before fencing and replicating a ledger fragment that's still being written to upon bookie failure.
+    default: 30
+
 - name: Read-only mode support
+  params:
+  - param: readOnlyModeEnabled
+    description: If all ledger directories configured are full, then support only read requests for clients. If "readOnlyModeEnabled=true" then on all ledger disks full, bookie will be converted to read-only mode and serve only read requests. Otherwise the bookie will be shutdown. By default this will be disabled.
+    default: 'false'
+
 - name: Disk utilization
+  params:
+  - param: diskUsageThreshold
+    description: |
+      For each ledger dir, maximum disk space which can be used. Default is 0.95f. i.e. 95% of disk can be used at most after which nothing will be written to that partition. If all ledger dir partions are full, then bookie will turn to readonly mode if 'readOnlyModeEnabled=true' is set, else it will shutdown. Valid values should be in between 0 and 1 (exclusive).
+    default: 0.95
+  - param: diskUsageLwmThreshold
+    description: |
+      Set the disk free space low water mark threshold. Disk is considered full when usage threshold is exceeded. Disk returns back to non-full state when usage is  below low water mark threshold. This prevents it from going back and forth between these states frequently when concurrent writes and compaction are happening. This also prevent bookie from switching frequently between read-only and read-writes states in the same cases.
+    default: 0.90
+  - param: diskCheckInterval
+    description: Disk check interval in milliseconds. Interval to check the ledger dirs usage.
+    default: 10000
+
 - name: ZooKeeper parameters
   params:
   - param: zkServers
@@ -124,100 +228,4 @@ groups:
     default: "localhost:2181"
   - param: zkTimeout
     description: ZooKeeper client session timeout in milliseconds. Bookie server will exit if it received SESSION_EXPIRED because it was partitioned off from ZooKeeper for more than the session timeout  JVM garbage collection, disk I/O will cause SESSION_EXPIRED. Increment this value could help avoiding this issue.
-    default: 10000
-
-
-- param: allowStorageExpansion
-  description: Allow the expansion of bookie storage capacity. Newly added ledger and index directories must be empty.
-  default: 'false'
-
-
-- param: entryLogFilePreallocationEnabled
-  description: Enable/Disable entry logger preallocation
-  default: true
-
-
-- param: explicitLacInterval
-  description: Interval between sending an explicit LAC in seconds
-  default: 1
-- param: majorCompactionThreshold
-  description: Threshold of major compaction. For those entry log files whose remaining size percentage reaches below  this threshold will be compacted in a major compaction.  Those entry log files whose remaining size percentage is still higher than the threshold will never be compacted. If it is set to less than zero, the minor compaction is disabled.
-  default: 0.8
-- param: majorCompactionInterval
-  description: Interval to run major compaction, in seconds. If it is set to less than zero, the major compaction is disabled.
-  default: 86400
-- param: compactionMaxOutstandingRequests
-  description: Set the maximum number of entries which can be compacted without flushing. When compacting, the entries are written to the entrylog and the new offsets are cached in memory. Once the entrylog is flushed the index is updated with the new offsets. This parameter controls the number of entries added to the entrylog before a flush is forced. A higher value for this parameter means  more memory will be used for offsets. Each offset consists of 3 longs. This parameter should _not_ be modified unless you know what you're doing.
-  default: 100000
-- param: compactionRate
-  description: Set the rate at which compaction will readd entries. The unit is adds per second.
-  default: 1000
-- param: isThrottleByBytes
-  description: Throttle compaction by bytes or by entries.
-  default: 'false'
-- param: compactionRateByEntries
-  description: Set the rate at which compaction will readd entries. The unit is adds per second.
-  default: 1000
-- param: compactionRateByBytes
-  description: Set the rate at which compaction will read entries. The unit is bytes added per second.
-  default: 1000000
-
-- param: numJournalCallbackThreads
-  description: The number of threads that should handle journal callbacks.
-  default: 1
-
-
-
-
-
-- param: openFileLimit
-  description: |
-    Max number of ledger index files could be opened in bookie server. If number of ledger index files reaches this limitation, bookie server started to swap some ledgers from memory to disk. Too frequent swap will affect performance. You can tune this number to gain performance according your requirements.
-  default: 900
-- param: pageSize
-  description: |
-    Size of a index page in ledger cache, in bytes. A larger index page can improve performance writing page to disk, which is efficent when you have small number of ledgers and these ledgers have similar number of entries. If you have large number of ledgers and each ledger has fewer entries, smaller index page would improve memory usage.
-  default: 8192
-- param: pageLimit
-  description: |
-    How many index pages provided in ledger cache. If number of index pages reaches this limitation, bookie server starts to swap some ledgers from memory to disk. You can increment this value when you found swap became more frequent. But make sure pageLimit*pageSize should not more than JVM max memory limitation, otherwise you would got OutOfMemoryException. In general, incrementing pageLimit, using smaller index page would gain bettern performance in lager number of ledgers with fewer entries case. If pageLimit is -1, bookie server will use 1/3 of JVM memory to compute the limitation of number of index pages.
-  default: 1
-- param: readOnlyModeEnabled
-  description: If all ledger directories configured are full, then support only read requests for clients. If "readOnlyModeEnabled=true" then on all ledger disks full, bookie will be converted to read-only mode and serve only read requests. Otherwise the bookie will be shutdown. By default this will be disabled.
-  default: 'false'
-- param: diskUsageThreshold
-  description: |
-    For each ledger dir, maximum disk space which can be used. Default is 0.95f. i.e. 95% of disk can be used at most after which nothing will be written to that partition. If all ledger dir partions are full, then bookie will turn to readonly mode if 'readOnlyModeEnabled=true' is set, else it will shutdown. Valid values should be in between 0 and 1 (exclusive).
-  default: 0.95
-- param: diskUsageLwmThreshold
-  description: |
-    Set the disk free space low water mark threshold. Disk is considered full when usage threshold is exceeded. Disk returns back to non-full state when usage is  below low water mark threshold. This prevents it from going back and forth between these states frequently when concurrent writes and compaction are happening. This also prevent bookie from switching frequently between read-only and read-writes states in the same cases.
-  default: 0.90
-- param: diskCheckInterval
-  description: Disk check interval in milliseconds. Interval to check the ledger dirs usage.
-  default: 10000
-- param: auditorPeriodicCheckInterval
-  description: |
-    The time interval, in seconds, at which the auditor will check all ledgers in the cluster. By default this runs once a week.
-
-    Set this to `0` to disable the periodic check completely. Note that periodic checking will put extra load on the cluster, so it should not be run more frequently than once a day.
-  default: 604800
-- param: auditorPeriodicBookieCheckInterval
-  description: The time interval between auditor bookie checks, in seconds. The auditor bookie check checks ledger metadata to see which bookies shoul contain entries for each ledger. If a bookie that should contain entries is unavailable, then the ledger containing that entry is marked for recovery. Setting this to 0 disables the periodic check. Bookie checks will still run when a bookie fails. The default is once per day.
-  default: 86400
-- param: flushEntrylogBytes
-  description: Entry log flush interval, in bytes. Setting this to 0 or less disables this feature and makes flush happen on log rotation. Flushing in smaller chunks but more frequently reduces spikes in disk I/O. Flushing too frequently may negatively affect performance.
-  default: 0
-- param: lostBookieRecoveryDelay
-  description: How long to wait, in seconds, before starting auto recovery of a lost bookie.
-  default: 0
-
-- param: readBufferSizeBytes
-  description: The capacity allocated for [`BufferedReadChannel`](/api/org/apache/bookkeeper/bookie/BufferedReadChannel)s, in bytes.
-  default: 512
-- param: writeBufferSizeBytes
-  description: The number of bytes used as capacity for the write buffer.
-  default: 65536
-- param: useHostNameAsBookieID
-  description: Whether the bookie should use its hostname to register with the ZooKeeper coordination service. When `false`, the bookie will use its IP address for the registration.
-  default: 'false'
+    default: 10
