--- a/site/_config.yml
+++ b/site/_config.yml
@@ -3,7 +3,7 @@ subtitle: A replicated log service
 github_repo: https://github.com/apache/bookkeeper
 permalink: pretty
 bk_version: "4.5.0"
-baseurl: /bookkeeper
+baseurl: /bookkeeper/
 destination: ../docs
 
 livereload: true
