BOOKKEEPER-1033: Handle DirsPartitionDuplication
    - Change config name from allowMultipleDirsUnderSamePartition to allowMultipleDirsUnderSameDiskPartition
    - do diskpartitionduplication check for journalDirectories also
    - relevant testcases

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -322,5 +322,5 @@ zkTimeout=10000
 # journal at the time of Bookie Start in Readonly Mode (in bytes)
 # minUsableSizeForIndexFileCreation=1073741824
 
-# Configure the Bookie to allow/disallow multiple ledger/index directories in the same filesystem partition
-# allowMultipleDirsUnderSamePartition=false
+# Configure the Bookie to allow/disallow multiple ledger/index/journal directories in the same filesystem diskpartition
+# allowMultipleDirsUnderSameDiskPartition=false
